# zed

./: Cargo.toml  FORK.md
assets/keymaps/: default-macos.json
crates/fork_integration/: Cargo.toml
crates/fork_integration/src/: fork_integration.rs
crates/forkfeatures/pr_indicator/: Cargo.toml
crates/forkfeatures/pr_indicator/src/: auth.rs  github.rs  pr_indicator.rs  remote.rs  state.rs
crates/forkfeatures/thread_switcher/: Cargo.toml
crates/forkfeatures/thread_switcher/src/: thread_row.rs  thread_switcher.rs
crates/sidebar/src/: sidebar.rs  thread_switcher.rs
crates/title_bar/src/: title_bar.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs
