[package]
name = "thread_switcher"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/thread_switcher.rs"
doctest = false

[dependencies]
agent_ui.workspace = true
fuzzy.workspace = true
gpui.workspace = true
log.workspace = true
picker.workspace = true
sidebar.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
